--- a/css/custom.css
+++ b/css/custom.css
@@ -102,7 +102,8 @@ html body {
 	max-width: 100%;
 	min-width: 100%;
 	/*height: calc(100vh - 160px);*/
-	height: calc(100vh - 7rem);
+	/*height: calc(100vh - 7rem);*/
+	height: calc(100vh - 4rem);
 	/* height: calc(100vh - 500px); */
 	position: relative;	
 }
