--- a/css/custom.css
+++ b/css/custom.css
@@ -5,22 +5,22 @@ html body {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+	background: #f1f1f1; 
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #4DCBCD; 
+	background: #4DCBCD; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+	background: #555; 
 }
 .ddc_fix_navTop{
 	padding-top: 4rem;
@@ -166,13 +166,13 @@ html body {
 }
 .ddc_popup .ddc_popup_content .ddc_popup_body{
 	padding: 5px;
-    height: calc(100vh - 240px);
-    overflow-y: auto;
+	height: calc(100vh - 240px);
+	overflow-y: auto;
 }
 .ddc_popup .ddc_popup_content .ddc_popup_footer{
 	display: grid;
-    grid-template-columns: 50% 50%;
-    text-align: center;
+	grid-template-columns: 50% 50%;
+	text-align: center;
 }
 .ddc_popup .ddc_popup_content .ddc_popup_footer .ddc_submit{
 	margin-right: 5px;
@@ -182,6 +182,22 @@ html body {
 }
 .ddc_layerList{
 	display: none;
+}
+.ddc_thuadat{
+	display: none;
+}
+.ddc_giadat{
+	display: none;
+}
+.ddc_quydat{
+	display: none;
+}
+.doluong{
+	display: none;
+}
+.ddc_svg img{
+	width: 20px;
+	/*fill: #007bff*/
 }
 
 
